kustomize/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker
spec:
  minReadySeconds: 4
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: docker
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9797"
      labels:
        app: docker
    spec:
      nodeName: klust1
      resources:
        limits:
          cpu: 1000m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 32Mi
      containers:
        - name: registry
          image: registry:2.8.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: repo-vol
              mountPath: "/var/lib/registry"
            - name: auth-vol
              mountPath: "/auth"
              readOnly: true
      volumes:
        - name: repo-vol
          persistentVolumeClaim:
            claimName: docker-repo-pvc
        - name: auth-vol
          secret:
            secretName: auth-secret
