kustomize/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  type: NodePort
  selector:
    app: docker
  ports:
  - port: 5000
    targetPort: 5000
